--- a/styles/scss/_site.scss
+++ b/styles/scss/_site.scss
@@ -41,6 +41,10 @@
   &__subtitle {
     grid-area: subtitle;
     text-align: center;
+    margin-top: 80px;
+    @include breakpoint(md) {
+      margin-top: 0;
+    }
   }
 }
 
