--- a/styles/scss/_typography.scss
+++ b/styles/scss/_typography.scss
@@ -86,9 +86,9 @@ a {
 }
 
 .title-background {
-  font-size: $font-size-h4;
+  // font-size: $font-size-h4;
+  font-size: $font-size-h3;
   @include breakpoint(md){
-    font-size: $font-size-h3;
   }
   display: inline;
   line-height: 1.6;
